--- a/crates/league-modpkg/Cargo.toml
+++ b/crates/league-modpkg/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 thiserror = "1.0.60"
 byteorder = "1.5.0"
-io-ext = { path = "../io-ext" }
+io-ext = { git = "https://github.com/LeagueToolkit/league-toolkit.git" }
 serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "1.3.0"
 binrw = "0.14.1"
