--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -14,6 +14,7 @@ colored = "2"
 inquire = "0.7.5"
 slug = "0.1.6"
 league-modpkg = { path = "../league-modpkg" }
+fantome = { path = "../fantome" }
 glob = "0.3.2"
 semver = "1.0.25"
 binrw = "0.14.1"
