--- a/deny.toml
+++ b/deny.toml
@@ -12,12 +12,15 @@ targets = [
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
 vulnerability = "deny"
-unmaintained = "warn"
+unmaintained = "all"
 yanked = "warn"
 notice = "warn"
 ignore = [
     # Add any specific advisories you want to ignore here
 ]
+
+[advisories.severity]
+unmaintained = "warn"
 
 [licenses]
 allow = [
