--- a/deny.toml
+++ b/deny.toml
@@ -9,30 +9,37 @@ targets = [
 ]
 
 [advisories]
+version = 2
 db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
-vulnerability = "deny"
-unmaintained = "all"
+unmaintained = "workspace"
 yanked = "warn"
-notice = "warn"
 ignore = [
     # Add any specific advisories you want to ignore here
 ]
 
 [licenses]
+version = 2
 allow = [
     "MIT",
     "Apache-2.0",
+    "BSL-1.0",
     "Apache-2.0 WITH LLVM-exception",
     "BSD-2-Clause",
     "BSD-3-Clause",
-    "ISC",
-    "Unicode-DFS-2016",
     "CC0-1.0",
-    "AGPL-3.0",
+    "AGPL-3.0-only",
+    "Unicode-3.0",
+    "MPL-2.0",
 ]
-deny = ["GPL-2.0", "GPL-3.0", "LGPL-2.1", "LGPL-3.0"]
 confidence-threshold = 0.8
+clarify = [
+    # External unlicensed crates from league-toolkit - assign AGPL-3.0-only license
+    { name = "io-ext", version = "*", expression = "AGPL-3.0-only", license-files = [
+    ] },
+    { name = "league-primitives", version = "*", expression = "AGPL-3.0-only", license-files = [
+    ] },
+]
 exceptions = [
     # Allow specific packages with different licenses if needed
 ]
@@ -52,4 +59,4 @@ skip-tree = [
 unknown-registry = "warn"
 unknown-git = "warn"
 allow-registry = ["https://github.com/rust-lang/crates.io-index"]
-allow-git = []
+allow-git = ["https://github.com/LeagueToolkit/league-toolkit.git"]
