--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -28,3 +28,8 @@ fantome = { path = "../fantome" }
 glob = "0.3.2"
 semver = "1.0.25"
 binrw = "0.14.1"
+image = { version = "0.25", default-features = false, features = [
+    "webp",
+    "png",
+    "jpeg",
+] }
