--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -17,14 +17,14 @@ clap = { version = "4.5.20", features = ["derive"] }
 miette = { version = "7", features = ["fancy"] }
 thiserror = "2.0"
 toml = "0.8.19"
-mod-project = { path = "../mod-project" }
+ltk_mod_project = { version = "0.1.0", path = "../ltk_mod_project" }
 regex = "1.11.1"
 serde_json = "1.0"
 colored = "2"
 inquire = "0.7.5"
 slug = "0.1.6"
-league-modpkg = { path = "../league-modpkg" }
-fantome = { path = "../fantome" }
+ltk_modpkg = { version = "0.1.0", path = "../ltk_modpkg" }
+ltk_fantome = { version = "0.1.0", path = "../ltk_fantome" }
 glob = "0.3.2"
 semver = "1.0.25"
 binrw = "0.14.1"
