--- a/crates/ltk_mod_project/Cargo.toml
+++ b/crates/ltk_mod_project/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "fantome"
+name = "ltk_mod_project"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 license = "AGPL-3.0-only"
 
 [dependencies]
-zip = "2.2.0"
-image = "0.25.2"
 serde = { version = "1.0", features = ["derive"] }
+toml = "0.8.19"
 serde_json = "1.0"
-eyre = "0.6"
-walkdir = "2.5.0"
-mod-project = { path = "../mod-project" }
