--- a/crates/ltk_modpkg/Cargo.toml
+++ b/crates/ltk_modpkg/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "league-modpkg"
+name = "ltk_modpkg"
 version = "0.1.0"
 edition = "2021"
 license = "AGPL-3.0-only"
@@ -7,7 +7,7 @@ license = "AGPL-3.0-only"
 [dependencies]
 thiserror = "1.0.60"
 byteorder = "1.5.0"
-io-ext = { git = "https://github.com/LeagueToolkit/league-toolkit.git" }
+ltk_io_ext = "0.2.1"
 serde = { version = "1.0", features = ["derive"] }
 rmp-serde = "1.3.0"
 binrw = "0.14.1"
