--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -25,6 +25,7 @@ inquire = "0.7.5"
 slug = "0.1.6"
 ltk_modpkg = { version = "0.1.1", path = "../ltk_modpkg" }
 ltk_fantome = { version = "0.1.1", path = "../ltk_fantome" }
+ltk_texture = { version = "0.3.0" }
 glob = "0.3.2"
 semver = "1.0.25"
 binrw = "0.14.1"
@@ -39,3 +40,4 @@ reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls",
 ] }
 serde = { version = "1.0", features = ["derive"] }
+camino = { workspace = true }
