--- a/crates/ltk_fantome/Cargo.toml
+++ b/crates/ltk_fantome/Cargo.toml
@@ -20,3 +20,4 @@ serde_json = "1.0"
 eyre = "0.6"
 walkdir = "2.5.0"
 ltk_mod_project = { version = "0.1.1", path = "../ltk_mod_project" }
+camino = { workspace = true }
