--- a/crates/ltk_modpkg/Cargo.toml
+++ b/crates/ltk_modpkg/Cargo.toml
@@ -23,6 +23,7 @@ itertools = "0.14.0"
 proptest = "1.6.0"
 zstd = "0.13"
 tempfile = "3.17.1"
+semver = { version = "1.0.27", features = ["serde"] }
 
 [dependencies.xxhash-rust]
 version = "0.8.15"
