--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -31,6 +31,7 @@ ltk_fantome = { version = "0.1.3", path = "../ltk_fantome" }
 glob = "0.3.2"
 semver = "1.0.25"
 binrw = "0.14.1"
+zip = "2.2.0"
 image = { version = "0.25", default-features = false, features = [
     "webp",
     "png",
