--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -43,4 +43,6 @@ reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls",
 ] }
 serde = { version = "1.0", features = ["derive"] }
-camino = { workspace = true }
+camino = { workspace = true, features = ["serde1", "proptest1"] }
+sysinfo = { workspace = true }
+directories-next = "2.0"
