chore: add ltk-manager release plz config

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -27,6 +27,16 @@ name = "ltk_mod_project"
 publish = true
 changelog_update = true
 
+[[package]]
+name = "ltk_pki"
+publish = true
+changelog_update = true
+
+[[package]]
+name = "ltk-manager"
+publish = false
+changelog_update = true
+
 [changelog]
 header = """
 # Changelog
