feat(ltk-manager): add biome

--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "check": "biome check .",
+    "check:fix": "biome check --write ."
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -20,6 +24,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.0.0",
     "@tauri-apps/cli": "^2",
     "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.0",
