--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -3,7 +3,7 @@ name = "league-mod"
 version = "0.2.1"
 edition = "2021"
 description = "A comprehensive toolkit for creating, managing, and distributing League of Legends mods"
-license = "AGPL-3.0-only"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/LeagueToolkit/league-mod"
 homepage = "https://github.com/LeagueToolkit/league-mod"
 documentation = "https://github.com/LeagueToolkit/league-mod/wiki"
