--- a/crates/ltk_mod_project/Cargo.toml
+++ b/crates/ltk_mod_project/Cargo.toml
@@ -2,7 +2,7 @@
 name = "ltk_mod_project"
 version = "0.1.2"
 edition = "2021"
-license = "AGPL-3.0-only"
+license = "MIT OR Apache-2.0"
 description = "Types and helpers for League Toolkit mod project definitions"
 repository = "https://github.com/LeagueToolkit/league-mod"
 homepage = "https://github.com/LeagueToolkit/league-mod"
