--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -24,7 +24,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.0.0",
+    "@biomejs/biome": "2.3.8",
     "@tauri-apps/cli": "^2",
     "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.0",
