--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -8,10 +8,10 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "lint": "biome lint .",
-    "format": "biome format --write .",
-    "check": "biome check .",
-    "check:fix": "biome check --write ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@tauri-apps/api": "^2",
@@ -24,14 +24,22 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.8",
+    "@eslint/js": "^9.0.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tauri-apps/cli": "^2",
     "@tailwindcss/vite": "^4.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "eslint": "^9.0.0",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.0",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.6.0",
+    "typescript-eslint": "^8.0.0",
     "vite": "^6.0.0"
   },
   "packageManager": "pnpm@9.14.2"
