--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -14,6 +14,8 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.139.11",
+    "@tanstack/react-router-devtools": "^1.139.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2",
     "@tauri-apps/plugin-fs": "^2",
@@ -26,8 +28,9 @@
   "devDependencies": {
     "@eslint/js": "^9.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
-    "@tauri-apps/cli": "^2",
     "@tailwindcss/vite": "^4.0.0",
+    "@tanstack/router-plugin": "^1.139.11",
+    "@tauri-apps/cli": "^2",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
