--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -14,6 +14,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.139.11",
     "@tanstack/react-router-devtools": "^1.139.11",
     "@tauri-apps/api": "^2",
