--- a/crates/ltk-manager/.prettierignore
+++ b/crates/ltk-manager/.prettierignore
@@ -1,6 +1,13 @@
-node_modules/
+# Build outputs
 dist/
-src-tauri/target/
-gen/
+node_modules/
+
+# Lock files
 pnpm-lock.yaml
 
+# Generated files
+src/routeTree.gen.ts
+gen/
+
+# Tauri
+src-tauri/
