--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.460.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "zod": "^3.24.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
