--- a/crates/league-mod/Cargo.toml
+++ b/crates/league-mod/Cargo.toml
@@ -18,12 +18,15 @@ miette = { version = "7", features = ["fancy"] }
 thiserror = "2.0"
 toml = "0.8.19"
 ltk_mod_project = { version = "0.1.3", path = "../ltk_mod_project" }
+ltk_mod_core = { version = "0.1.0", path = "../ltk_mod_core" }
 regex = "1.11.1"
 serde_json = "1.0"
 colored = "2"
 inquire = "0.7.5"
 slug = "0.1.6"
-ltk_modpkg = { version = "0.1.4", path = "../ltk_modpkg" }
+ltk_modpkg = { version = "0.1.4", path = "../ltk_modpkg", features = [
+    "project",
+] }
 ltk_fantome = { version = "0.1.3", path = "../ltk_fantome" }
 glob = "0.3.2"
 semver = "1.0.25"
@@ -40,4 +43,3 @@ reqwest = { version = "0.12", default-features = false, features = [
 ] }
 serde = { version = "1.0", features = ["derive"] }
 camino = { workspace = true }
-sysinfo = { workspace = true }
