--- a/crates/ltk_fantome/Cargo.toml
+++ b/crates/ltk_fantome/Cargo.toml
@@ -19,4 +19,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 eyre = "0.6"
 walkdir = "2.5.0"
+thiserror = "2.0"
+slug = "0.1"
 ltk_mod_project = { version = "0.1.3", path = "../ltk_mod_project" }
+
+[dev-dependencies]
+tempfile = "3.15"
