--- a/crates/ltk_fantome/Cargo.toml
+++ b/crates/ltk_fantome/Cargo.toml
@@ -21,7 +21,10 @@ eyre = "0.6"
 walkdir = "2.5.0"
 thiserror = "2.0"
 slug = "0.1"
+camino = "1.1"
+itertools = "0.14"
 ltk_mod_project = { version = "0.1.3", path = "../ltk_mod_project" }
+ltk_wad = "0.2.6"
 
 [dev-dependencies]
 tempfile = "3.15"
