--- a/crates/ltk-manager/src-tauri/Cargo.toml
+++ b/crates/ltk-manager/src-tauri/Cargo.toml
@@ -15,6 +15,8 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
+tauri-plugin-updater = "2"
+tauri-plugin-process = "2"
 
 # Workspace crates
 ltk_modpkg = { path = "../../ltk_modpkg" }
