chore: disable release-plz GitHub releases for ltk-manager
ltk-manager has its own dedicated release workflow for building
the Tauri app. We only disable git_release_enable so release-plz
still creates tags (which trigger the Tauri workflow) but doesn't
create empty GitHub releases.

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -35,7 +35,7 @@ changelog_update = true
 [[package]]
 name = "ltk-manager"
 publish = false
-changelog_update = true
+git_release_enable = false
 
 [changelog]
 header = """
