feat(ltk-manager): implement app settings persistence and first-run setup
- Add settings persistence to JSON in app data directory
- Implement first-run League path auto-detection from ltk_mod_core
- Add mod storage path configuration in settings UI
- Create TanStack Query hooks for settings state management
- Redirect to settings page on first run if League path not detected
- Add welcome banner for first-run experience

Closes #38, closes #39, closes #40, closes #41

--- a/crates/ltk-manager/src-tauri/Cargo.toml
+++ b/crates/ltk-manager/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ anyhow = "1"
 # Utilities
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
+dirs = "5"
 
 # Logging
 tracing = "0.1"
