--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -24,25 +24,27 @@
     ]
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-rc.0",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.139.11",
     "@tanstack/react-router-devtools": "^1.139.11",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2",
     "@tauri-apps/plugin-fs": "^2",
+    "@tauri-apps/plugin-process": "^2",
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-updater": "^2",
-    "@tauri-apps/plugin-process": "^2",
     "lucide-react": "^0.460.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.4.0",
+    "ts-pattern": "^5.9.0",
     "zod": "^3.24.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
-    "husky": "^9.0.0",
-    "lint-staged": "^15.0.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/router-plugin": "^1.139.11",
@@ -55,6 +57,8 @@
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "globals": "^16.0.0",
+    "husky": "^9.0.0",
+    "lint-staged": "^15.0.0",
     "prettier": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.6.0",
     "tailwindcss": "^4.0.0",
