--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -45,7 +45,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.0.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@tailwindcss/vite": "^4.0.0",
     "@tanstack/router-plugin": "^1.139.11",
     "@tauri-apps/cli": "^2",
@@ -54,13 +53,15 @@
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react": "^4.3.0",
     "eslint": "^9.0.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^16.0.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.0.0",
-    "prettier": "^3.4.0",
-    "prettier-plugin-tailwindcss": "^0.6.0",
+    "prettier": "^3.7.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.6.0",
     "typescript-eslint": "^8.0.0",
