--- a/crates/ltk-manager/src-tauri/Cargo.toml
+++ b/crates/ltk-manager/src-tauri/Cargo.toml
@@ -10,7 +10,6 @@ repository = "https://github.com/LeagueToolkit/league-mod"
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-# Tauri
 tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
@@ -18,27 +17,22 @@ tauri-plugin-fs = "2"
 tauri-plugin-updater = "2"
 tauri-plugin-process = "2"
 
-# Workspace crates
 ltk_modpkg = { path = "../../ltk_modpkg" }
 ltk_mod_project = { path = "../../ltk_mod_project" }
 ltk_mod_core = { path = "../../ltk_mod_core" }
 
-# Async runtime
 tokio = { version = "1", features = ["full"] }
+libloading = "0.9.0"
 
-# Serialization
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
-# Error handling
 thiserror = "2"
 anyhow = "1"
 
-# Utilities
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 
-# Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
