--- a/crates/ltk-manager/src-tauri/Cargo.toml
+++ b/crates/ltk-manager/src-tauri/Cargo.toml
@@ -20,6 +20,8 @@ tauri-plugin-process = "2"
 ltk_modpkg = { path = "../../ltk_modpkg" }
 ltk_mod_project = { path = "../../ltk_mod_project" }
 ltk_mod_core = { path = "../../ltk_mod_core" }
+ltk_fantome = { path = "../../ltk_fantome" }
+ltk_wad = "0.2.6"
 
 tokio = { version = "1", features = ["full"] }
 libloading = "0.9.0"
@@ -32,9 +34,13 @@ anyhow = "1"
 
 uuid = { version = "1", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
+byteorder = "1.5.0"
+xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
+zstd = { version = "0.13", default-features = false }
 
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-appender = "0.2"
 
 [features]
 default = ["custom-protocol"]
