--- a/crates/ltk-manager/src-tauri/Cargo.toml
+++ b/crates/ltk-manager/src-tauri/Cargo.toml
@@ -37,6 +37,7 @@ chrono = { version = "0.4", features = ["serde"] }
 byteorder = "1.5.0"
 xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
 zstd = { version = "0.13", default-features = false }
+base64 = "0.22"
 
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
