--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-rc.0",
+    "@tanstack/react-form": "^1.28.0",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.139.11",
     "@tanstack/react-router-devtools": "^1.139.11",
