--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,29 +10,51 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  # Detect which parts of the codebase changed
+  detect-changes:
+    name: Detect Changes
+    runs-on: ubuntu-latest
+    outputs:
+      ltk-manager: ${{ steps.filter.outputs.ltk-manager }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            ltk-manager:
+              - 'crates/ltk-manager/**'
+
   check:
     name: Check
     runs-on: ubuntu-latest
+    needs: detect-changes
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
 
       - name: Install Linux dependencies
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Setup Node.js
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: "22"
 
       - name: Setup pnpm
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         uses: pnpm/action-setup@v4
         with:
           version: 9
 
       - name: Build frontend
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         working-directory: crates/ltk-manager
         run: |
           pnpm install --frozen-lockfile
@@ -45,31 +67,41 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Check all packages
-        run: cargo check --all-targets --all-features
+        run: |
+          if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
+            cargo check --all-targets --all-features
+          else
+            cargo check --all-targets --all-features --workspace --exclude ltk-manager
+          fi
 
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: detect-changes
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
 
       - name: Install Linux dependencies
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Setup Node.js
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: "22"
 
       - name: Setup pnpm
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         uses: pnpm/action-setup@v4
         with:
           version: 9
 
       - name: Build frontend
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         working-directory: crates/ltk-manager
         run: |
           pnpm install --frozen-lockfile
@@ -82,31 +114,41 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Run tests
-        run: cargo test --all-features --workspace
+        run: |
+          if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
+            cargo test --all-features --workspace
+          else
+            cargo test --all-features --workspace --exclude ltk-manager
+          fi
 
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
+    needs: detect-changes
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
 
       - name: Install Linux dependencies
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Setup Node.js
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         uses: actions/setup-node@v4
         with:
           node-version: "22"
 
       - name: Setup pnpm
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         uses: pnpm/action-setup@v4
         with:
           version: 9
 
       - name: Build frontend
+        if: needs.detect-changes.outputs.ltk-manager == 'true'
         working-directory: crates/ltk-manager
         run: |
           pnpm install --frozen-lockfile
@@ -121,7 +163,12 @@ jobs:
         uses: Swatinem/rust-cache@v2
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D warnings
+        run: |
+          if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
+            cargo clippy --all-targets --all-features -- -D warnings
+          else
+            cargo clippy --all-targets --all-features --workspace --exclude ltk-manager -- -D warnings
+          fi
 
   fmt:
     name: Format
