--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,12 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Install Linux dependencies
-        if: needs.detect-changes.outputs.ltk-manager == 'true'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebp-dev
+          if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
+            sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          fi
 
       - name: Setup Node.js
         if: needs.detect-changes.outputs.ltk-manager == 'true'
@@ -83,10 +85,12 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Install Linux dependencies
-        if: needs.detect-changes.outputs.ltk-manager == 'true'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebp-dev
+          if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
+            sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          fi
 
       - name: Setup Node.js
         if: needs.detect-changes.outputs.ltk-manager == 'true'
@@ -130,10 +134,12 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Install Linux dependencies
-        if: needs.detect-changes.outputs.ltk-manager == 'true'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebp-dev
+          if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
+            sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          fi
 
       - name: Setup Node.js
         if: needs.detect-changes.outputs.ltk-manager == 'true'
@@ -199,7 +205,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebp-dev libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
