--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebp-dev
+          sudo apt-get install -y libwebp-dev liblzma-dev
           if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
             sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
           fi
@@ -87,7 +87,7 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebp-dev
+          sudo apt-get install -y libwebp-dev liblzma-dev
           if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
             sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
           fi
@@ -136,7 +136,7 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebp-dev
+          sudo apt-get install -y libwebp-dev liblzma-dev
           if [ "${{ needs.detect-changes.outputs.ltk-manager }}" == "true" ]; then
             sudo apt-get install -y libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
           fi
@@ -205,7 +205,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwebp-dev libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
+          sudo apt-get install -y libwebp-dev liblzma-dev libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
 
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
