--- a/crates/ltk-manager/src-tauri/Cargo.toml
+++ b/crates/ltk-manager/src-tauri/Cargo.toml
@@ -43,6 +43,10 @@ xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
 zstd = { version = "0.13", default-features = false }
 base64 = "0.22"
 
+zip = "2.2.0"
+image = "0.25.2"
+slug = "0.1"
+
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
