--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -8,10 +8,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "check": "npm run typecheck && npm run lint && npm run format:check",
     "prepare": "husky"
   },
   "lint-staged": {
