--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -27,6 +27,9 @@
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-rc.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-form": "^1.28.0",
     "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.139.11",
