--- a/crates/ltk-manager/package.json
+++ b/crates/ltk-manager/package.json
@@ -45,6 +45,7 @@
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0",
     "ts-pattern": "^5.9.0",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.0",
     "zustand": "^5.0.0"
   },
