feat(ltk_overlay): implement incremental overlay rebuild
Add per-WAD fingerprinting and state persistence so the overlay builder
can skip unchanged WADs, clean stale ones, and only rebuild what changed.

- Three build strategies: skip (exact match), incremental, full rebuild
- Game index caching with fingerprint validation
- Cross-WAD override distribution using hash index
- SubChunkTOC filtering to prevent mod-introduced corruption
- Add walkdir and camino serde1 dependencies

--- a/crates/ltk_overlay/Cargo.toml
+++ b/crates/ltk_overlay/Cargo.toml
@@ -36,7 +36,8 @@ xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
 
 # IO
 byteorder = "1.5"
-camino = { workspace = true }
+camino = { workspace = true, features = ["serde1"] }
+walkdir = "2"
 
 # Parallelism
 rayon = "1.10"
