feat(ltk-mod-project): add support for tags, champions, and maps in mod project configuration

--- a/crates/ltk_mod_project/test-data/mod.config.toml
+++ b/crates/ltk_mod_project/test-data/mod.config.toml
@@ -5,6 +5,8 @@ description = "A mod for League of Legends that changes the map to the old Summo
 
 authors = ["TheKillerey", { name = "Crauzer", role = "Contributor" }]
 license = "MIT"
+tags = ["map-skin"]
+maps = ["summoners-rift"]
 [[transformers]]
 name = "tex-converter"
 patterns = ["**/*.dds", "**/*.png"]
